Fix text overlapping

--- a/src/Pages/Alumni/Alumni.css
+++ b/src/Pages/Alumni/Alumni.css
@@ -90,20 +90,11 @@ body {
 	color: #ffffff;
 }
 
-.Header {
-	background: linear-gradient(to top, #c7e3ff 50%, #ffffff 50%);
-	padding: 0 50px;
-	font-weight: 600;
-	color: #0078e8;
-	border-top: 0px;
-	margin: 0 20px;
-}
-
 .HeaderStyle {
 	text-align: center;
 	border-bottom: 1px solid #e4e4e4;
-	line-height: 0.1em;
-	margin: 10px 0 60px;
+	font-weight: 600;
+	color: #0078e8;
 }
 
 .Role {
